# notebooklm-mcp

./: .gitignore  CHANGELOG.md  CLAUDE.md  GEMINI.md  README.md  pyproject.toml
.agent/workflows/: gh-comment.md  release.md
.github/workflows/: publish.yml
desktop-extension/: manifest.json
docs/: API_REFERENCE.md  AUTHENTICATION.md  CLI_GUIDE.md  MCP_CLI_TEST_PLAN.md  MCP_TEST_PLAN.md
docs/plans/: 2026-01-27-sharing-api.md
scripts/: build_mcpb.py
src/notebooklm_consumer_mcp/: auth_cli.py
src/notebooklm_mcp/: __init__.py  api_client.py  auth.py  server.py
src/notebooklm_tools/: __init__.py
src/notebooklm_tools/cli/: ai_docs.py  formatters.py  main.py
src/notebooklm_tools/cli/commands/: doctor.py  download.py  note.py  notebook.py  setup.py  share.py  skill.py  source.py  studio.py  verbs.py
src/notebooklm_tools/core/: auth.py  auth_cli.py  base.py  client.py  constants.py  download.py  retry.py  sources.py  studio.py
src/notebooklm_tools/data/: AGENTS_SECTION.md  SKILL.md
src/notebooklm_tools/mcp/: server.py
src/notebooklm_tools/mcp/tools/: downloads.py  notes.py  studio.py
src/notebooklm_tools/services/: downloads.py  notes.py  studio.py
src/notebooklm_tools/utils/: cdp.py  config.py
tests/cli/: test_formatters.py
tests/core/: test_download.py  test_retry.py
tests/services/: test_downloads.py  test_notes.py
